--- a/faqs/01_cs-ai.toml
+++ b/faqs/01_cs-ai.toml
@@ -1,4 +1,4 @@
-alogo.src = "informatik_ai.png"
+logo.src = "informatik_ai.png"
 logo.href = "https://oeh.jku.at/cs/"
 
 de.title = "FAQ: Informatik & AI Studium"
